[package]
name = "delay_map"
authors = ["Age Manning <Age@AgeManning.com>"]
description = "HashMap collections whose entries expire after a given time"
repository = "https://github.com/agemanning/delay_map"
readme = "./README.md"
keywords = ["collections", "hashmap", "hashset", "delay", "map", "delayqueue"]
categories = ["algorithms", "caching", "data-structures"]
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.19"
tokio-util = { version = "0.6.9", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.16.0", features = ["time", "rt-multi-thread", "macros"] }
tokio-test = "0.4.2"
