[package]
name = "delay_map"
authors = ["Age Manning <Age@AgeManning.com>"]
description = "HashMap collections whose entries expire after a given time"
license = "Apache-2.0"
repository = "https://github.com/agemanning/delay_map"
readme = "./README.md"
keywords = ["collections", "hashmap", "hashset", "delay", "delayqueue"]
categories = ["algorithms", "caching", "data-structures"]
version = "0.4.1"
edition = "2021"

[dependencies]
futures = "0.3.31"
tokio-util = { version = "0.7.15", features = ["time"] }
tokio = { version = "1.44", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["time", "rt-multi-thread", "macros"] }
tokio-test = "0.4.4"
